fix(jdk17): replace List.getFirst() with get(0) in MongoDBFindTest
JDK17-compatibility sweep for the 26.6.1 -> 26.7.1 backport window: List.getFirst()
is a JDK21+ API; use get(0) instead to keep the java17 branch compiling under
--release 17.